--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <img src="/33-removebg-preview.png" alt="Logo" />
     <form class="Create">
       <label for="firstname" class="holders">Firstname:</label><br />
       <input type="text" class="fill" required /> <br />
@@ -17,7 +18,9 @@
       <input type="email" class="fill" required /> <br />
       <label for="password" class="holders">Password:</label><br />
       <input type="password" class="fill" required /><br />
-      <button class="btn">Sign in</button>
+      <a href="https://video-section.vercel.app/">
+        <button class="btn">Sign in</button>
+      </a>
     </form>
   </body>
 </html>
