--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <label for="password" class="holders">Password:</label><br />
       <input type="password" class="fill" required /><br />
       <a href="https://video-section.vercel.app/">
-        <button class="btn">Sign in</button>
+        <button type="button" class="btn">Sign in</button>
       </a>
     </form>
   </body>
